--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.5",
+    "@radix-ui/react-popover": "^1.0.6",
     "@sentry/react": "^7.53.1",
     "@sentry/replay": "^7.53.1",
     "@sentry/tracing": "^7.53.1",
@@ -71,6 +72,7 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-datepicker": "^4.12.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
