remove tokens from dev envs

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PROXY_TO=https://stage-api.codecov.dev
-REACT_APP_STRIPE_KEY=pk_test_Z0khIXOxBzJOKOfDkWwQmObw
 REACT_APP_BASE_URL=https://stage-web.codecov.dev
 REACT_APP_MARKETING_BASE_URL=https://about.codecov.io
 REACT_APP_SEGMENT_KEY=$SEGMENT_KEY
-REACT_APP_LAUNCHDARKLY=60f9b3cf32beb9244b10f3d0
-REACT_APP_BAREMETRICS_TOKEN=d8170427-c4d4-4292-8b35-b8b6978e6d1e
+REACT_APP_BAREMETRICS_TOKEN=
+REACT_APP_LAUNCHDARKLY=
+REACT_APP_STRIPE_KEY=
