--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -74,27 +74,14 @@ jobs:
         run: |-
           make push
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1.14.1
+        with:
+          username: ${{ secrets.CODECOV_DEVOPS_DOCKER_USERNAME }}
+          password: ${{ secrets.CODECOV_DEVOPS_DOCKER_PASSWORD }}
+
       - name: Publish Enterprise
         env:
           ENV: enterprise
         run: |-
           make push.enterprise
-          
-      
-
-  release:
-    uses: ./.github/workflows/client-release.yml
-    secrets:
-      bucket: ${{ secrets.bucket_alpha }}
-      client_name: ${{ secrets.client_alpha }}
-      api_url: ${{ secrets.api_url_alpha }}
-      base_url: ${{ secrets.base_url_alpha }}
-      token: ${{ secrets.GITHUB_TOKEN }}
-      gcp_sa: ${{ secrets.CODECOV_GCP_WIDSA }}
-      gcp_idp: ${{ secrets.CODECOV_GCP_WIDP }}
-    permissions:
-      pull-requests: 'write'
-      contents: 'read'
-      id-token: 'write'
-      actions: 'read'
-      repository-projects: 'read'
