--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -74,14 +74,16 @@ jobs:
         run: |-
           make push
 
+      - name: Publish Enterprise
+        run: |-
+          make push.enterprise
+          
       - name: Log in to Docker Hub
         uses: docker/login-action@v1.14.1
         with:
           username: ${{ secrets.CODECOV_DEVOPS_DOCKER_USERNAME }}
           password: ${{ secrets.CODECOV_DEVOPS_DOCKER_PASSWORD }}
 
-      - name: Publish Enterprise
-        env:
-          ENV: enterprise
+      - name: Publish Rolling
         run: |-
-          make push.enterprise
+          make push.rolling
