--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -1,4 +1,4 @@
-name: Update Release PR
+name: Update Release
 
 on:
   workflow_dispatch: {}
@@ -17,29 +17,26 @@ jobs:
             echo "Invalid branch chosen"
             exit 1;
           fi
-      - name: Initialize mandatory git config
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email noreply@github.com
-      - name: Extract version
-        shell: bash
-        run: echo "##[set-output name=version;]$(echo ${GITHUB_REF#refs/heads/release/})"
-        id: extract-version
-      - name: Update version file
-        id: make-commit
-        run: |
-          git commit --allow-empty --message "Prepare release ${{ steps.extract-version.outputs.version }}"
-          echo "::set-output name=commit::$(git rev-parse HEAD)"
-      - name: Push release branch
-        run: git push origin release/${{ steps.extract-version.outputs.version }}
-      - name: Create pull request into main
-        uses: thomaseizinger/create-pull-request@1.2.2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          head: release/${{ steps.extract-version.outputs.version }}
-          base: main
-          title: Update Release ${{ steps.extract-version.outputs.version }}
-          reviewers: ${{ github.event.issue.user.login }}
-          body: |
-            Update Release PR for ${{ steps.extract-version.outputs.version }}
-            I've updated the version name and committed: ${{ steps.make-commit.outputs.commit }}.
+
+      - name: Build Enterprise
+        env:
+          ENV: enterprise
+          NPM_TOKEN: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+        run: |-
+          make build.enterprise
+
+      - name: Dive
+        env:
+          ENV: production
+        run: |-
+          make dive
+
+      - name: Deep Dive
+        run: |-
+          make deep-dive
+
+      - name: Publish Enterprise
+        env:
+          ENV: enterprise
+        run: |-
+          make push.enterprise
