--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@storybook/theming": "^7.0.17",
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/eslint-plugin-query": "^4.29.4",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@testing-library/jest-dom": "^5.16.4",
