Add sentry dsn for alpha and remove extra workflows

--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -18,6 +18,7 @@ jobs:
       token: ${{ secrets.GITHUB_TOKEN }}
       gcp_sa: ${{ secrets.CODECOV_GCP_WIDSA }}
       gcp_idp: ${{ secrets.CODECOV_GCP_WIDP }}
+      sentry_dsn: ${{ secrets.sentry_dsn_alpha }}
     permissions:
       pull-requests: 'write'
       contents: 'read'
