--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -19,6 +19,8 @@ on:
         required: true
       gcp_idp:
         required: true
+      sentry_dsn:
+        required: true
 jobs:
   release:
     name: Release
@@ -52,5 +54,7 @@ jobs:
           REACT_APP_BASE_URL: https://${{ secrets.base_url }}
           REACT_APP_CE_CLIENT: ${{ secrets.client_name }}
           REACT_APP_ENTERPRISE_DEFAULT_PROVIDER: ${{ secrets.default_provider }}
+          REACT_APP_SENTRY_DSN: ${{ secrets.sentry_dsn }}
+          REACT_APP_SENTRY_ENVIRONMENT: ${{ secrets.client_name }}
 
       - run: gsutil -m rsync -d -c -r build gs://${{ secrets.bucket }}
