--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.1",
+    "react-router-dom-v5-compat": "^6.15.0",
     "react-use": "^17.2.4",
     "victory": "^36.6.11",
     "web-vitals": "^2.1.4",
