--- a/package.json
+++ b/package.json
@@ -87,16 +87,17 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@sentry/webpack-plugin": "^1.20.1",
-    "@storybook/addon-a11y": "^7.0.17",
-    "@storybook/addon-actions": "^7.0.17",
-    "@storybook/addon-essentials": "^7.0.17",
-    "@storybook/addon-links": "^7.0.17",
-    "@storybook/manager-api": "^7.0.17",
-    "@storybook/node-logger": "^7.0.17",
-    "@storybook/preset-create-react-app": "^7.0.17",
-    "@storybook/react": "^7.0.17",
-    "@storybook/react-webpack5": "^7.0.17",
-    "@storybook/theming": "^7.0.17",
+    "@storybook/addon-a11y": "^7.4.0",
+    "@storybook/addon-actions": "^7.4.0",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/manager-api": "^7.4.0",
+    "@storybook/node-logger": "^7.4.0",
+    "@storybook/preset-create-react-app": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-webpack5": "^7.4.0",
+    "@storybook/theming": "^7.4.0",
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -116,7 +117,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "faker": "^5.5.3",
     "http-proxy-middleware": "^2.0.6",
@@ -128,8 +129,9 @@
     "prettier": "^2.8.8",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "source-map-explorer": "^2.5.3",
-    "storybook": "^7.0.17",
+    "storybook": "^7.4.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
     "webpack": "^5.84.1"
