--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,42 @@ WORKDIR /home/workspace
 RUN apk -U add git
 RUN npm install
 
+FROM            alpine:3.17 as uploader
+USER            root
+WORKDIR         /tmp
+RUN             apk -U add gnupg curl
+RUN             curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --import
+RUN             mkdir uploader && \
+                mkdir uploader/linux && \
+                mkdir uploader/macos && \
+                mkdir uploader/alpine && \
+                mkdir uploader/windows
+
+WORKDIR         /tmp/uploader
+RUN             curl -s -o linux/codecov https://uploader.codecov.io/latest/linux/codecov && \
+                curl -s -o linux/codecov.SHA256SUM https://uploader.codecov.io/latest/linux/codecov.SHA256SUM && \
+                curl -s -o linux/codecov.SHA256SUM.sig https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig && \
+                curl -s -o alpine/codecov https://uploader.codecov.io/latest/alpine/codecov && \
+                curl -s -o alpine/codecov.SHA256SUM https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM && \
+                curl -s -o alpine/codecov.SHA256SUM.sig https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM.sig && \
+                curl -s -o macos/codecov https://uploader.codecov.io/latest/macos/codecov && \
+                curl -s -o macos/codecov.SHA256SUM https://uploader.codecov.io/latest/macos/codecov.SHA256SUM && \
+                curl -s -o macos/codecov.SHA256SUM.sig https://uploader.codecov.io/latest/macos/codecov.SHA256SUM.sig && \
+                curl -s -o windows/codecov.exe https://uploader.codecov.io/latest/windows/codecov.exe && \
+                curl -s -o windows/codecov.exe.SHA256SUM https://uploader.codecov.io/latest/windows/codecov.exe.SHA256SUM && \
+                curl -s -o windows/codecov.exe.SHA256SUM.sig https://uploader.codecov.io/latest/windows/codecov.exe.SHA256SUM.sig
+
+RUN             gpg --verify linux/codecov.SHA256SUM.sig linux/codecov.SHA256SUM && \
+                gpg --verify alpine/codecov.SHA256SUM.sig alpine/codecov.SHA256SUM && \
+                gpg --verify macos/codecov.SHA256SUM.sig macos/codecov.SHA256SUM && \
+                gpg --verify windows/codecov.exe.SHA256SUM.sig windows/codecov.exe.SHA256SUM && \
+                cd linux && sha256sum -c codecov.SHA256SUM && cd .. && \
+                cd alpine && sha256sum -c codecov.SHA256SUM && cd .. && \
+                cd macos && sha256sum -c codecov.SHA256SUM && cd .. && \
+                cd windows && sha256sum -c codecov.exe.SHA256SUM
+
+COPY            docker/index.html /tmp/uploader
+
 FROM node:18.8.0-alpine3.15 as build
 ARG REACT_APP_ENV_ARG
 ARG REACT_APP_CODECOV_VERSION
@@ -58,6 +94,10 @@ USER codecov
 # Add application
 WORKDIR /var/www/app
 COPY --from=build --chmod=755 --chown=codecov:application /home/workspace/build/ /var/www/app/gazebo
+COPY --from=uploader --chown=codecov:application /tmp/uploader/ /var/www/uploader/
 
 EXPOSE 8080
 CMD ["/usr/bin/start-nginx"]
+
+# syntax=docker/dockerfile:1.3
+ARG FRONTEND_IMAGE
