--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Worker CI
+name: Gazebo CI
 
 on:
   push:
@@ -15,20 +15,18 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  AR_REPO: ${{ secrets.CODECOV_GAZEBO_IMAGE_V2 || 'codecov/self-hosted-frontend' }}
   total-runners: 6
 
 jobs:
   install:
     name: Install deps
     runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -46,16 +44,15 @@ jobs:
         run: |
           npm ci
   build:
-    name: Install deps
+    name: Build App
     runs-on: ubuntu-latest
     needs: [install]
-    permissions:
-      contents: 'read'
-      id-token: 'write'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -78,6 +75,9 @@ jobs:
     needs: install
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -85,7 +85,7 @@ jobs:
           cache-name: cache-gazebo-node-modules
         with:
           path: |
-            requirements.tar
+            node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
@@ -153,7 +153,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -205,23 +208,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, test]
     if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
-    permissions:
-      contents: 'read'
-      id-token: 'write'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Cache node_modules
-        id: cache-node-modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-gazebo-node-modules
-        with:
-          path: |
-            node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
 
       - name: Build self hosted
         run: |
