--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,46 @@ jobs:
           codecovcli -u ${{ secrets.CODECOV_PUBLIC_QA_URL }} do-upload -t ${{ secrets.CODECOV_PUBLIC_QA_TOKEN }} --fail-on-error
 
 
+  storybook:
+    name: Run storybook
+    runs-on: ubuntu-latest
+    needs: install
+    if: ${{ !github.event.pull_request.head.repo.fork && startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-gazebo-node-modules
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Deploy to Chromatic
+        run: |
+          npm run chromatic
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+  fossa:
+    name: Run storybook
+    runs-on: ubuntu-latest
+    needs: install
+    if: ${{ !github.event.pull_request.head.repo.fork && startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
+      - uses: fossas/fossa-action@v1.3.1
+        with:
+          api-key: ${{secrets.FOSSA_API_KEY}}
+
   self-hosted:
     name: Build Self Hosted Gazebo
     runs-on: ubuntu-latest
