--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,7 +207,7 @@ jobs:
     name: Run storybook
     runs-on: ubuntu-latest
     needs: install
-    if: ${{ !github.event.pull_request.head.repo.fork && startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
+    if: ${{ !github.event.pull_request.head.repo.fork && !startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
@@ -233,7 +233,7 @@ jobs:
     name: Run storybook
     runs-on: ubuntu-latest
     needs: install
-    if: ${{ !github.event.pull_request.head.repo.fork && startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
+    if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
