--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,7 +230,7 @@ jobs:
         env:
           CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
   fossa:
-    name: Run storybook
+    name: Run fossa
     runs-on: ubuntu-latest
     needs: install
     if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
@@ -253,6 +253,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build self hosted
+        if: ${{ github.event.pull_request.merged == true && (github.head_ref == 'main' || startsWith(github.ref, 'refs/tags/self-hosted')) && github.repository_owner == 'codecov' }}
         run: |
           make build
 
