--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,34 +38,35 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
-
+      - uses: oven-sh/setup-bun@v1
+        if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
       - name: Install packages
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
         run: |
-          npm ci
+          bun install
   build:
     name: Build App
     runs-on: ubuntu-latest
-    needs: [install]
+    needs: [install, test]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
-      - name: Cache node_modules
-        id: cache-node-modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-gazebo-node-modules
-        with:
-          path: |
-            node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
+#      - name: Cache node_modules
+#        id: cache-node-modules
+#        uses: actions/cache@v3
+#        env:
+#          cache-name: cache-gazebo-node-modules
+#        with:
+#          path: |
+#            node_modules
+#          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+#          restore-keys: |
+#            ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Install packages
+      - name: Build React App
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
         run: |
           npm run build
