--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,32 +44,6 @@ jobs:
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
         run: |
           bun install
-  build:
-    name: Build App
-    runs-on: ubuntu-latest
-    needs: [install, test]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.8.0'
-#      - name: Cache node_modules
-#        id: cache-node-modules
-#        uses: actions/cache@v3
-#        env:
-#          cache-name: cache-gazebo-node-modules
-#        with:
-#          path: |
-#            node_modules
-#          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-${{ env.cache-name }}-
-
-      - name: Build React App
-        if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
-        run: |
-          npm run build
   lint:
     name: Run Lint
     runs-on: ubuntu-latest
@@ -145,7 +119,7 @@ jobs:
           echo "::set-output name=json::${INDEX_JSON}"
   test:
     name: "Test Runner #${{ matrix.runner-index }}"
-    needs: [build, codecovstartup, runner-indexes]
+    needs: [install, codecovstartup, runner-indexes]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -243,7 +217,32 @@ jobs:
       - uses: fossas/fossa-action@v1.3.1
         with:
           api-key: ${{secrets.FOSSA_API_KEY}}
+  build:
+    name: Build App
+    runs-on: ubuntu-latest
+    needs: [install, test]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.8.0'
+      #      - name: Cache node_modules
+      #        id: cache-node-modules
+      #        uses: actions/cache@v3
+      #        env:
+      #          cache-name: cache-gazebo-node-modules
+      #        with:
+      #          path: |
+      #            node_modules
+      #          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      #          restore-keys: |
+      #            ${{ runner.os }}-${{ env.cache-name }}-
 
+      - name: Build React App
+        if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
+        run: |
+          npm run build
   self-hosted:
     name: Build Self Hosted Gazebo
     runs-on: ubuntu-latest
