--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
 
   codecovstartup:
     name: Codecov Startup
-    needs: build
+    needs: install
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -107,7 +107,7 @@ jobs:
   runner-indexes:
     runs-on: ubuntu-latest
     name: Generate runner indexes
-    needs: build
+    needs: install
     outputs:
       json: ${{ steps.generate-index-list.outputs.json }}
     steps:
@@ -246,30 +246,28 @@ jobs:
   self-hosted:
     name: Build Self Hosted Gazebo
     runs-on: ubuntu-latest
-    needs: [build, test]
-    if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
+    needs: [install, test]
+    if: ${{ github.event.pull_request.merged == true && (github.head_ref == 'main' || startsWith(github.ref, 'refs/tags/self-hosted')) && github.repository_owner == 'codecov' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Build self hosted
-        if: ${{ github.event.pull_request.merged == true && (github.head_ref == 'main' || startsWith(github.ref, 'refs/tags/self-hosted')) && github.repository_owner == 'codecov' }}
         run: |
           make build
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1.14.1
-        if: ${{ github.event.pull_request.merged == true && github.head_ref == 'main' && github.repository_owner == 'codecov' }}
         with:
           username: ${{ secrets.CODECOV_DEVOPS_DOCKER_USERNAME }}
           password: ${{ secrets.CODECOV_DEVOPS_DOCKER_PASSWORD }}
 
       - name: Push self hosted rolling
-        if: ${{ github.event.pull_request.merged == true && github.head_ref == 'main' && github.repository_owner == 'codecov' }}
+        if: github.head_ref == 'main'
         run: |
           make push
 
       - name: Push self hosted release
-        if: ${{ github.event.pull_request.merged == true && startsWith(github.ref, 'refs/tags/self-hosted') && github.repository_owner == 'codecov' }}
+        if: startsWith(github.ref, 'refs/tags/self-hosted')
         run: |
           make release
