--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,17 +227,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
-      #      - name: Cache node_modules
-      #        id: cache-node-modules
-      #        uses: actions/cache@v3
-      #        env:
-      #          cache-name: cache-gazebo-node-modules
-      #        with:
-      #          path: |
-      #            node_modules
-      #          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-      #          restore-keys: |
-      #            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-gazebo-node-modules
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
 
       - name: Build React App
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
