--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -37,8 +40,11 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
-      - uses: oven-sh/setup-bun@v1
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
+
       - name: Install packages
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
         run: |
@@ -48,10 +54,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -63,18 +73,24 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
+
       - name: Run linter
         run: |
           npm run lint
+
   type-check:
     name: Run Type Checker
     runs-on: ubuntu-latest
     needs: install
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -86,6 +102,7 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
+
       - name: Run TSC
         run: |
           npm run type-check
@@ -99,10 +116,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
+
       - name: Install CLI
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           pip install --no-cache-dir codecov-cli
+
       - name: Run Startup
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         env:
@@ -110,16 +129,19 @@ jobs:
         run: |
           codecovcli create-commit --fail-on-error
           codecovcli create-report --fail-on-error
+
       - name: Run Startup Staging
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           codecovcli -u ${{ secrets.CODECOV_STAGING_URL }} create-commit -t ${{ secrets.CODECOV_ORG_TOKEN_STAGING }} --fail-on-error
           codecovcli -u ${{ secrets.CODECOV_STAGING_URL }} create-report -t ${{ secrets.CODECOV_ORG_TOKEN_STAGING }} --fail-on-error
+
       - name: Run Startup QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           codecovcli -u ${{ secrets.CODECOV_QA_URL }} create-commit -t ${{ secrets.CODECOV_QA_TOKEN }} --fail-on-error
           codecovcli -u ${{ secrets.CODECOV_QA_URL }} create-report -t ${{ secrets.CODECOV_QA_TOKEN }} --fail-on-error
+
       - name: Run Startup Public QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
@@ -133,12 +155,14 @@ jobs:
     outputs:
       json: ${{ steps.generate-index-list.outputs.json }}
     steps:
-      - id: generate-index-list
+      - name: Generate test index list
+        id: generate-index-list
         run: |
           MAX_INDEX=$((${{ env.total-runners }}-1))
           INDEX_LIST=$(seq 0 ${MAX_INDEX})
           INDEX_JSON=$(jq --null-input --compact-output '. |= [inputs]' <<< ${INDEX_LIST})
           echo "::set-output name=json::${INDEX_JSON}"
+
   test:
     name: 'Test Runner #${{ matrix.runner-index }}'
     needs: [install, codecovstartup, runner-indexes]
@@ -151,9 +175,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -165,35 +192,42 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
-      - uses: chaosaffe/split-tests@v1-alpha.1
+
+      - name: Split tests
+        uses: chaosaffe/split-tests@v1-alpha.1
         id: split-tests
-        name: Split tests
         with:
           glob: '"src/**/*.spec.js" "src/**/*.test.js" "src/**/*.spec.jsx" "src/**/*.test.jsx" "src/**/*.spec.ts" "src/**/*.test.ts" "src/**/*.spec.tsx" "src/**/*.test.tsx"'
           split-total: ${{ env.total-runners }}
           split-index: ${{ matrix.runner-index }}
+
       - name: Bring test env up
         run: |
           CI=true npm run test:ci -- --maxWorkers=2 ${{ steps.split-tests.outputs.test-suite }}
         env:
           JEST_JUNIT_OUTPUT_DIR: ./reports/junit/
+
       - name: Install CLI
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           pip install --no-cache-dir codecov-cli
+
       ## Don't upload on forks for now.
       - name: Upload to Production
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           codecovcli do-upload -t ${{ secrets.CODECOV_ORG_TOKEN }} --fail-on-error
+
       - name: Upload to Staging
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           codecovcli -u ${{ secrets.CODECOV_STAGING_URL }} do-upload -t ${{ secrets.CODECOV_ORG_TOKEN_STAGING }} --fail-on-error
+
       - name: Upload to QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
           codecovcli -u ${{ secrets.CODECOV_QA_URL }} do-upload -t ${{ secrets.CODECOV_QA_TOKEN }} --fail-on-error
+
       - name: Upload to Public QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
@@ -205,12 +239,16 @@ jobs:
     needs: install
     if: ${{ !github.event.pull_request.head.repo.fork && !startsWith(github.ref, 'refs/heads/dependabot') && github.repository_owner == 'codecov' }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -222,24 +260,32 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
+
       - name: Deploy to Chromatic
         run: |
           npm run chromatic
         env:
           CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
   fossa:
-    name: Run fossa
+    name: Run Fossa
     runs-on: ubuntu-latest
     needs: install
     if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
-      - uses: fossas/fossa-action@v1.3.1
+
+      - name: Run Fossa
+        uses: fossas/fossa-action@v1.3.1
         with:
           api-key: ${{secrets.FOSSA_API_KEY}}
+
   build:
     name: Build App
     runs-on: ubuntu-latest
@@ -247,9 +293,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '18.8.0'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v3
@@ -266,6 +315,7 @@ jobs:
         if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' }}
         run: |
           npm run build
+
   self-hosted:
     name: Build Self Hosted Gazebo
     runs-on: ubuntu-latest
